; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/phy/extr_phy-omap-otg.c_omap_otg_set_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/phy/extr_phy-omap-otg.c_omap_otg_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.otg_device = type { i32, i64 }

@OMAP_OTG_ID = common dso_local global i32 0, align 4
@OMAP_OTG_BSESSVLD = common dso_local global i32 0, align 4
@OMAP_OTG_ASESSVLD = common dso_local global i32 0, align 4
@OMAP_OTG_BSESSEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.otg_device*)* @omap_otg_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap_otg_set_mode(%struct.otg_device* %0) #0 {
  %2 = alloca %struct.otg_device*, align 8
  store %struct.otg_device* %0, %struct.otg_device** %2, align 8
  %3 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %4 = getelementptr inbounds %struct.otg_device, %struct.otg_device* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %18, label %7

7:                                                ; preds = %1
  %8 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %9 = getelementptr inbounds %struct.otg_device, %struct.otg_device* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %14 = load i32, i32* @OMAP_OTG_ID, align 4
  %15 = load i32, i32* @OMAP_OTG_BSESSVLD, align 4
  %16 = or i32 %14, %15
  %17 = call i32 @omap_otg_ctrl(%struct.otg_device* %13, i32 %16)
  br label %40

18:                                               ; preds = %7, %1
  %19 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %20 = getelementptr inbounds %struct.otg_device, %struct.otg_device* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %25 = load i32, i32* @OMAP_OTG_ASESSVLD, align 4
  %26 = call i32 @omap_otg_ctrl(%struct.otg_device* %24, i32 %25)
  br label %39

27:                                               ; preds = %18
  %28 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %29 = getelementptr inbounds %struct.otg_device, %struct.otg_device* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %38, label %32

32:                                               ; preds = %27
  %33 = load %struct.otg_device*, %struct.otg_device** %2, align 8
  %34 = load i32, i32* @OMAP_OTG_ID, align 4
  %35 = load i32, i32* @OMAP_OTG_BSESSEND, align 4
  %36 = or i32 %34, %35
  %37 = call i32 @omap_otg_ctrl(%struct.otg_device* %33, i32 %36)
  br label %38

38:                                               ; preds = %32, %27
  br label %39

39:                                               ; preds = %38, %23
  br label %40

40:                                               ; preds = %39, %12
  ret void
}

declare dso_local i32 @omap_otg_ctrl(%struct.otg_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
